fix: tooltip obscured on some websites (z-index)

--- a/src/contentScript.css
+++ b/src/contentScript.css
@@ -13,7 +13,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 9999999;
   max-width: 30em;
   padding: 4px 5px;
 }
